# amm

amm/: Cargo.toml
amm/src/: fungible_token_receiver.rs  helper.rs  lib.rs  logger.rs  market.rs  market_creation.rs  oracle.rs  types.rs  upgrade.rs
amm/tests/it/: claim_scenario.rs  fee_tests.rs  liquidity_tests.rs  market_end_tests.rs  pool_initiation_tests.rs  swap_tests.rs  uneven_lp_shares_solvency_tests.rs
amm/tests/it/utils/: account_utils.rs  amm_utils.rs  deposit.rs  helpers.rs  lib.rs  oracle_utils.rs
token/: Cargo.toml
