[package]
name = "amm"
version = "0.1.0"
authors = ["jasperdg <jasperdegooijer@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { git = "https://github.com/near/near-sdk-rs.git", rev="249dacdcd3fd34bc00f0895a275f33f05cd910c1" }
oracle = { git = "https://github.com/fluxprotocol/oracle-monorepo-near", rev="eded4e676339203f55ebb0457cc7dde5f5b98351" }
uint = { version = "0.8.5", default-features = false }
serde = "1.0.118"

[dev-dependencies]
near-sdk-sim = { git = "https://github.com/near/near-sdk-rs.git", rev="249dacdcd3fd34bc00f0895a275f33f05cd910c1" }
token = { path = "../token" }